Create packages with github actions